fix: remove need to clone

--- a/package.json
+++ b/package.json
@@ -31,19 +31,16 @@
   "devDependencies": {
     "babel": "5.8.23",
     "mkdirp": "0.5.1",
+    "rimraf": "2.4.3",
     "standard": "5.3.1",
     "semantic-release": "^4.3.5"
   },
   "dependencies": {
     "async": "1.4.2",
     "conventional-commits-parser": "0.1.2",
-    "cpy": "3.4.1",
     "git-raw-commits": "0.1.2",
     "meow": "3.3.0",
-    "ncp": "2.0.0",
     "os-homedir": "1.0.1",
-    "parse-author": "0.2.0",
-    "rimraf": "2.4.3",
-    "through2": "2.0.0"
+    "parse-author": "0.2.0"
   }
 }
