chore(travis): ignore semantic-release tags

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,7 @@ before_script:
   - npm prune
 after_success:
   - npm run semantic-release
+branches:
+  except:
+    # Ignore Git tags created by semantic-release, like "v1.2.3"
+    - /^v\d+\.\d+\.\d+$/
