chore: Add fake version to package.json for npm install to work on repo

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "publish-dist",
+  "version": "1.0.5",
   "description": "Build and publish dist",
   "main": "dist/index.js",
   "bin": "cli.js",
